--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
 
 <!-- ================= FOOTER ================= -->
 <footer class="bg-dark text-white text-center py-3">
-  <p class="mb-0">© 2026 PurrfectPaws. All Rights Reserved.</p>
+  <p class="mb-0">© 2026 PurrfectPaws GH (ESSUON-SEPAH EMMANUEL). All Rights Reserved.</p>
 </footer>
 
 
@@ -165,4 +165,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
