--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
         </p>
 
         <p><strong>Email:</strong> support@purrfectpaws.com</p>
-        <p><strong>Phone:</strong> +1 (555) 123-4567</p>
-        <p><strong>Address:</strong> 45 Whiskers Avenue, Pet City</p>
+        <p><strong>Phone:</strong> +233 507073633</p>
+        <p><strong>Address:</strong> ACCRA-GHANA</p>
       </div>
 
       <div class="col-md-6">
@@ -80,10 +80,11 @@
   </div>
 </section>
 
-<footer class="bg-dark text-white text-center py-3">
-  © 2026 PurrfectPaws. All Rights Reserved.
+<footer class="bg-dark text-white text-center py-3"> © 2026 PurrfectPaws GH (ESSUON-SEPAH EMMANUEL). All Rights Reserved.
+
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
