--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@ Shop Now
 </section>
 
 <footer class="bg-dark text-white text-center py-3">
-© 2026 PurrfectPaws
+© 2026 PurrfectPaws GH (ESSUON-SEPAH EMMANUEL). All Rights Reserved.
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init({ duration:1000 });</script>
 </body>
+
 </html>
