--- a/reviews.html
+++ b/reviews.html
@@ -123,9 +123,10 @@
 
 
 <footer class="bg-dark text-white text-center py-3">
-  © 2026 PurrfectPaws. All Rights Reserved.
+   © 2026 PurrfectPaws GH (ESSUON-SEPAH EMMANUEL). All Rights Reserved.
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
