--- a/shop.html
+++ b/shop.html
@@ -63,11 +63,13 @@
 </div>
 </section>
 
+
 <footer class="bg-dark text-white text-center py-3">
-© 2026 PurrfectPaws
+   © 2026 PurrfectPaws GH (ESSUON-SEPAH EMMANUEL). All Rights Reserved.
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
 </body>
+
 </html>
